--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <h1 id='name'>Michel Quist</h1>
             <h3 class='links'>
                 Contact me here:
-                <a href="https://https://www.linkedin.com/in/michel-quist-5a8951303/">Linkedin</a>
+                <!--Real talk, this link might now work below. I made this website in an hour.-->
+                <a href="https://uk.linkedin.com/in/michel-quist-5a8951303">Linkedin</a>
                 <a href='mailto:michelrobertquist@gmail.com'>Email</a>
             </h3>
             <div class='container'>
